--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=(python-pudb python2-pudb)
 pkgver=2019.1
 pkgrel=1
 pkgdesc="A full-screen, console-based Python debugger"
-url="http://pypi.python.org/pypi/pudb"
+url="https://pypi.python.org/pypi/pudb"
 arch=('any')
 license=('MIT')
 makedepends=('python-urwid' 'python-pygments' 'python2-urwid' 'python2-pygments')
