--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.7.1
 pkgrel=1
 pkgdesc="A mindmapping tool"
 arch=('x86_64')
-url="http://www.insilmaril.de/vym/"
+url="https://www.insilmaril.de/vym/"
 license=('GPL')
 depends=('qt5-svg' 'desktop-file-utils' 'zip' 'unzip')
 makedepends=('qt5-tools' 'qt5-script')
