--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@ _xpkgpath=1380/49056
 pkgrel=8
 pkgdesc="subversion web interface"
 arch=(any)
-url="http://www.websvn.info"
+url="https://www.websvn.info"
 license=('GPL')
 depends=()
 backup=(srv/http/websvn/.htaccess)
