--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=xautomation
 pkgver=1.09
 pkgrel=3
 pkgdesc='Controls X from the command line and does "visual scraping".'
-url='http://hoopajoo.net/projects/xautomation.html'
+url='https://hoopajoo.net/projects/xautomation.html'
 arch=('x86_64')
 license=('GPL')
 depends=('libpng' 'libxtst')
