Replace http:// urls with https://
These packages' sites were all verified as https:// functional

git-svn-id: file:///srv/repos/svn-community/svn@487236 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=1.1.2
 pkgrel=6
 pkgdesc='Text objects based on indent levels'
 arch=(any)
-url='http://www.vim.org/scripts/script.php?script_id=3037'
+url='https://www.vim.org/scripts/script.php?script_id=3037'
 license=(MIT)
 groups=('vim-plugins')
 depends=(vim)
