--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.63a
 pkgrel=5
 pkgdesc="An utility to extract, test and  view the contents of archives created with the ARJ archiver"
 arch=('x86_64')
-url="http://www.ibiblio.org/pub/Linux/utils/compress/"
+url="https://www.ibiblio.org/pub/Linux/utils/compress/"
 license=('custom')
 depends=('glibc')
 source=("http://ibiblio.org/pub/Linux/utils/compress/$pkgname-$pkgver.tar.gz"
