--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.2
 pkgrel=5
 pkgdesc="An automatic X screen-locker/screen-saver"
 arch=(x86_64)
-url="http://ibiblio.org/pub/Linux/X11/screensavers/"
+url="https://ibiblio.org/pub/Linux/X11/screensavers/"
 license=('GPL2')
 depends=('libxss')
 makedepends=('imake')
