--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=3.5.4
 pkgrel=1
 epoch=1
 pkgdesc='Black box WordPress vulnerability scanner'
-url='http://wpscan.org'
+url='https://wpscan.org'
 arch=('x86_64')
 license=('custom:WPScan')
 depends=('ruby-bundler' 'libxslt' 'libyaml' 'curl' 'libxml2')
