--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=you-get
 pkgver=0.4.1314
 pkgrel=1
 pkgdesc="A YouTube/Youku/Niconico video downloader written in Python 3."
-url="http://www.soimort.org/you-get/"
+url="https://www.soimort.org/you-get/"
 arch=('any')
 license=('MIT')
 depends=('python-setuptools')
