--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.8.6
 pkgrel=3
 pkgdesc="Launch shell commands with your keyboard or your mouse under X"
 arch=('x86_64')
-url="http://www.nongnu.org/xbindkeys/xbindkeys.html"
+url="https://www.nongnu.org/xbindkeys/xbindkeys.html"
 license=('GPL')
 depends=('libx11' 'guile')
 optdepends=('tk: xbindkeys_show')
