--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=('unicorn' 'python-unicorn' 'python2-unicorn' 'ruby-unicorn-engine')
 pkgver=1.0.1
 pkgrel=6
 pkgdesc='Lightweight, multi-platform, multi-architecture CPU emulator framework based on QEMU'
-url='http://www.unicorn-engine.org'
+url='https://www.unicorn-engine.org'
 arch=('x86_64')
 license=('GPL2')
 makedepends=('python' 'python2' 'python-setuptools' 'python2-setuptools' 'ruby' 'ruby-rdoc')
