--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,7 @@ _scriptid=17123
 pkgrel=3
 pkgdesc='Tree explorer plugin for navigating the filesystem'
 arch=('any')
-url='http://www.vim.org/scripts/script.php?script_id=1658'
+url='https://www.vim.org/scripts/script.php?script_id=1658'
 license=('custom:WTFPL')
 depends=('vim')
 groups=('vim-plugins')
