--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=9
 pkgdesc='The "Light" face of WenQuanYi Micro Hei font family'
 arch=('any')
 license=('GPL3' 'APACHE' 'custom:"font embedding exception"')
-url="http://wenq.org"
+url="https://wenq.org"
 depends=('fontconfig' 'xorg-font-utils')
 source=("https://sourceforge.net/projects/wqy/files/$pkgname/${pkgver//_/-}/$pkgname-${pkgver//_/-}.tar.gz")
 sha512sums=('ac3ba1785c5187e1c4bf3fa919b030647371b94c26ff2d82d1c5fcc3b0626de16bc2459741f28c510a7ff804f2066b8b5708b2c451a38207b29254f9a11d2a9f')
