--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,7 @@ pkgrel=1
 epoch=1
 pkgdesc='Web-based news feed (RSS/Atom) aggregator'
 arch=(any)
-url='http://tt-rss.org'
+url='https://tt-rss.org'
 license=(GPL)
 backup=(etc/webapps/tt-rss/config.php)
 depends=(php)
