--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=20181104.0
 pkgrel=1
 pkgdesc='Swiss Army Knife SMTP; Command line SMTP testing, including TLS and AUTH'
 arch=('any')
-url="http://jetmore.org/john/code/${pkgname}/"
+url="https://jetmore.org/john/code/${pkgname}/"
 license=('GPL')
 depends=('perl-net-dns' 'perl-net-ssleay')
 source=("http://jetmore.org/john/code/${pkgname}/files/${pkgname}-${pkgver}.tar.gz")
