--- a/zathura-cb/trunk/PKGBUILD
+++ b/zathura-cb/trunk/PKGBUILD
@@ -6,7 +6,7 @@ pkgver=0.1.8
 pkgrel=1
 
 pkgdesc="Adds comic book support to zathura"
-url="http://pwmt.org/projects/zathura-cb/"
+url="https://git.pwmt.org/pwmt/zathura-cb"
 arch=('x86_64')
 license=('custom:zlib')
 
