--- a/zathura/trunk/PKGBUILD
+++ b/zathura/trunk/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.4.3
 pkgrel=2
 
 pkgdesc="Minimalistic document viewer"
-url="http://pwmt.org/projects/zathura/"
+url="https://git.pwmt.org/pwmt/zathura"
 arch=('x86_64')
 license=('custom')
 
