--- a/repos/community-any/PKGBUILD
+++ b/repos/community-any/PKGBUILD
@@ -1,51 +1,32 @@
 # Maintainer: David Runge <dave@sleepmap.de>
 _name=piexif
-pkgbase=python-piexif
-pkgname=('python-piexif' 'python2-piexif')
-pkgver=1.1.2
+pkgname=python-piexif
+pkgver=1.1.3
 pkgrel=1
 pkgdesc="To simplify exif manipulations with python. Writing, reading, and more"
 arch=('any')
 url="https://github.com/hMatoba/Piexif"
 license=('MIT')
-makedepends=('python-setuptools' 'python2-setuptools')
-checkdepends=('python-pytest' 'python-pillow' 'python-sphinx' 'python2-pytest' 'python2-pillow' 'python2-sphinx')
+depends=('python')
+makedepends=('python-setuptools')
+checkdepends=('python-pytest' 'python-pillow' 'python-sphinx')
 source=("https://files.pythonhosted.org/packages/source/${_name::1}/${_name}/${_name}-${pkgver}.zip")
-sha512sums=('045906fdbd49350866058bacafb61841030766bccb7d63ad3ee17ce9490858773c88e9fc86ca3e2985e752871e52b89778147d1b3d0abe5f1055d6cb02fc300d')
-
-prepare() {
-  mv -v "${_name}-$pkgver" "$pkgbase-$pkgver"
-}
+sha512sums=('df5f7793c39911af58bbae76cf998e2a7bc820b84dcf9808ee8f6a38f766f824fef28392ef88387e18b10c270c4b27881be310f0368076b6fb65379a11a93270')
 
 build() {
-  cd "$pkgbase-$pkgver"
+  cd "${_name}-${pkgver}"
   python setup.py build
-  python2 setup.py build
 }
 
 check() {
-  cd "$pkgbase-$pkgver"
-  export PYTHONPATH=build:${PYTHONPATH}
+  cd "${_name}-${pkgver}"
+  export PYTHONPATH="build:${PYTHONPATH}"
   py.test
-  py.test2
 }
 
-package_python-piexif() {
-  cd "$pkgbase-$pkgver"
-  depends=('python')
+package() {
+  cd "${_name}-${pkgver}"
   python setup.py install --skip-build \
-    --optimize=1 \
-    --prefix=/usr \
-    --root="${pkgdir}"
-  install -vDm 644 LICENSE.txt \
-    "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
-  install -vDm 644 README.rst -t "${pkgdir}/usr/share/doc/${pkgname}"
-}
-
-package_python2-piexif() {
-  cd "$pkgbase-$pkgver"
-  depends=('python2')
-  python2 setup.py install --skip-build \
     --optimize=1 \
     --prefix=/usr \
     --root="${pkgdir}"
