--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 
 _pkgbasename=freetype2
 pkgname=lib32-$_pkgbasename
-pkgver=2.10.0
-pkgrel=2
+pkgver=2.10.1
+pkgrel=1
 pkgdesc="TrueType font rendering library (32-bit)"
 arch=(x86_64)
 license=('GPL')
@@ -14,17 +14,15 @@ url="https://www.freetype.org/"
 depends=('lib32-zlib' 'lib32-bzip2' 'lib32-libpng' 'lib32-harfbuzz' $_pkgbasename)
 makedepends=('gcc-multilib')
 provides=('libfreetype.so')
-source=(https://download.savannah.gnu.org/releases/freetype/freetype-${pkgver}.tar.bz2{,.sig}
+source=(https://download.savannah.gnu.org/releases/freetype/freetype-${pkgver}.tar.xz{,.sig}
         0001-Enable-table-validation-modules.patch
         0002-Enable-infinality-subpixel-hinting.patch
-        0003-Enable-long-PCF-family-names.patch
-        0004-pcf-Fix-handling-of-undefined-glyph-56067.patch)
-sha1sums=('f6abf03e0e3189a0de883981c57d3861b5d314f5'
+        0003-Enable-long-PCF-family-names.patch)
+sha1sums=('79874ef4eaa52025126b71d836453b8279bdd331'
           'SKIP'
-          '46fd67e6a594f6c2c473b9321ba64913984ba42f'
-          '4bf0c0749db09878b918cc404300f0d3e9091607'
-          'af76172be8135e74391b7ad1b82c2124ae0ad86c'
-          '74d0ae26620a22c03002ecfffd7bd4c8130d6f6c')
+          '283427030ef4b942f01e24ba022f2b84f1733fa8'
+          '1efd1e1db64cb7705296b724920d6328ff5f1f14'
+          '6b289e2ba54a4513af9aa3981b374fccb20ffc89')
 validpgpkeys=('58E0C111E39F5408C5D3EC76C1A60EACE707FDA5')
 
 prepare() {
@@ -35,9 +33,6 @@ prepare() {
   patch -Np1 -i ../0001-Enable-table-validation-modules.patch
   patch -Np1 -i ../0002-Enable-infinality-subpixel-hinting.patch
   patch -Np1 -i ../0003-Enable-long-PCF-family-names.patch
-
-  # https://bugs.archlinux.org/task/62395
-  patch -Np1 -i ../0004-pcf-Fix-handling-of-undefined-glyph-56067.patch
 }
 
 build() {
