--- a/weston/repos/community-x86_64/PKGBUILD
+++ b/weston/repos/community-x86_64/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Joel Teichroeb <joel@teichroeb.net>
 
 pkgname=weston
-pkgver=6.0.0
+pkgver=6.0.1
 pkgrel=1
 pkgdesc='Reference implementation of a Wayland compositor'
 arch=('x86_64')
@@ -13,13 +13,12 @@ depends=('glibc' 'wayland' 'libxkbcommon' 'libinput' 'libunwind' 'pixman'
          'mesa' 'libegl' 'libgles' 'glib2' 'pango' 'lcms2' 'mtdev' 'libx11'
          'libxcb' 'dbus' 'libva' 'libxcursor' 'colord' 'freerdp')
 makedepends=('wayland-protocols' 'meson' 'ninja')
-validpgpkeys=('C7223EBE4EF66513B892598911A30156E0E67611' # Bryce Harrington
+validpgpkeys=('34FF9526CFEF0E97A340E2E40FDE7BE0E88F5E48' # emersion <contact@emersion.fr>
+              'C7223EBE4EF66513B892598911A30156E0E67611' # Bryce Harrington
               'C0066D7DB8E9AC6844D728715E54498E697F11D7') # Derek Foreman
-source=("https://wayland.freedesktop.org/releases/$pkgname-$pkgver.tar.xz"{,.sig}
-        "https://gitlab.freedesktop.org/wayland/weston/commit/cbffca980b19fd6a6de14d9f2b4dca6a7711d9e0.patch")
-md5sums=('7c634e262f8a464a076c97fd50ad36b3'
-         'SKIP'
-         '58467d89c63213af991d29035882d376')
+source=("https://wayland.freedesktop.org/releases/$pkgname-$pkgver.tar.xz"{,.sig})
+md5sums=('e7b10710ef1eac82258f97bfd41fe534'
+         'SKIP')
 
 prepare() {
   cd $pkgname-$pkgver
