--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -27,7 +27,7 @@ pkgname=('gambas3-gb-args'
          'gambas3-gb-web-feed' 'gambas3-gb-web-form' 'gambas3-gb-web'
          'gambas3-runtime' 'gambas3-devel' 'gambas3-ide' 'gambas3-script')
 pkgver=3.13.0
-pkgrel=3
+pkgrel=4
 pkgdesc="A free development environment based on a Basic interpreter."
 arch=('x86_64')
 url="http://gambas.sourceforge.net/"
@@ -42,9 +42,11 @@ makedepends=('intltool' 'postgresql' 'libffi' 'bzip2' 'glib2' 'v4l-utils'
 	 'gmime3')
 options=('!emptydirs' 'libtool')
 source=("https://gitlab.com/gambas/gambas/-/archive/${pkgver}/gambas-${pkgver}.tar.bz2"
-        gambas-poppler-0.76.patch)
+        gambas-poppler-0.76.patch
+        gambas-qt-5.13.patch)
 sha512sums=('5a7954df222a91f87926e6d96aca39b098cd3205f43d48557459e639ed4cf70bfb67c41a19d8296ec8f82acaa9a040549a99d4e1702f3fae2af381615a6cc84d'
-            'dab805eb855ad5774833a9d040599c37b7154cf8ad065278d425ea4a23749c442e0585309e4c03f5f2be286398226ee7153f1060fd2e1025c3761e5ded7056df')
+            'dab805eb855ad5774833a9d040599c37b7154cf8ad065278d425ea4a23749c442e0585309e4c03f5f2be286398226ee7153f1060fd2e1025c3761e5ded7056df'
+            'f7f6c124886062a14ec5fc03d1985317349dcaa837222243364eb210413ba3060a2814c67de5715f0e829c642a2ba1a38072039741ebdeb268f05bbebbaebd38')
 
 create_dirs() {
   install -dm755 ${pkgdir}/usr/lib/gambas3
@@ -55,6 +57,7 @@ prepare() {
   cd ${srcdir}/gambas-${pkgver}
 
   patch -p1 -i ../gambas-poppler-0.76.patch
+  patch -p1 -i ../gambas-qt-5.13.patch
   ./reconf-all
 }
 
