--- a/khard/repos/community-any/PKGBUILD
+++ b/khard/repos/community-any/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: David Runge <dave@sleepmap.de>
 pkgname=khard
-pkgver=0.13.0
+pkgver=0.14.0
 pkgrel=1
 pkgdesc="Console CardDAV client"
 arch=('any')
@@ -8,16 +8,19 @@ url="https://github.com/scheibler/khard"
 license=('GPL3')
 depends=('python-atomicwrites' 'python-configobj' 'python-ruamel-yaml'
 'python-setuptools' 'python-unidecode' 'python-vobject')
-makedepends=('python-setuptools')
+makedepends=('python-setuptools' 'python-sphinx')
 checkdepends=('python-pytest')
 optdepends=('vdirsyncer: Synchronization of address books with a DAV server'
             'diffutils: Using sdiff_khard_wrapper.sh')
-source=("https://files.pythonhosted.org/packages/source/${pkgname::1}/${pkgname}/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('353a51a06d6c7aa27b0f1cf35b3f7c113097ea4fa5e27bcb400f00de0cdd65ccaeadcc835b1cba541361a0395265cb967f731b23d875162f2be13381bc0979a6')
+# upstream doesn't always upload srcdist to pypi: https://github.com/scheibler/khard/issues/215
+# source=("https://files.pythonhosted.org/packages/source/${pkgname::1}/${pkgname}/${pkgname}-${pkgver}.tar.gz")
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/scheibler/${pkgname}/archive/v${pkgver}.tar.gz")
+sha512sums=('6024efdccd15d847f4aa317d48d364f8d4ccd0e063f10e2ce52b24d3d3e7fd4f2ab3432dd17ebfbba4572a86b9658b3495bc92bd0ab14f2a51e90817a42eb2d2')
 
 build() {
   cd "$pkgname-$pkgver"
   python setup.py build
+  make -C doc singlehtml man
 }
 
 check() {
@@ -35,14 +38,23 @@ package() {
   install -vDm 755 "misc/sdiff/sdiff_${pkgname}_wrapper.sh" \
     "${pkgdir}/usr/lib/${pkgname}/sdiff_${pkgname}_wrapper.sh"
   # twinkle integration
-  install -t "${pkgdir}/usr/share/${pkgname}/twinkle/scripts/" \
-    -vDm 644 misc/twinkle/scripts/*.py
-  install -t "${pkgdir}/usr/share/${pkgname}/twinkle/sounds/" \
-    -vDm 644 misc/twinkle/sounds/*.wav
+  install -vDm 644 misc/twinkle/scripts/*.py \
+    -t "${pkgdir}/usr/share/${pkgname}/twinkle/scripts/"
+  install -vDm 644 misc/twinkle/sounds/*.wav \
+    -t "${pkgdir}/usr/share/${pkgname}/twinkle/sounds/"
   # zsh
-  install -vDm 644 "misc/zsh/_${pkgname}" \
-    "${pkgdir}/usr/share/zsh/site-functions/_${pkgname}"
+  install -vDm 644 "misc/zsh/_"*"${pkgname}" \
+    -t "${pkgdir}/usr/share/zsh/site-functions/"
   # docs
-  install -t "${pkgdir}/usr/share/doc/${pkgname}/" \
-    -vDm 644 {AUTHORS,CHANGES,README.md} "misc/${pkgname}/"*.{example,yaml}
+  install -vDm 644 {AUTHORS,CHANGES,README.md} \
+                   "misc/${pkgname}/"*.{example,yaml} \
+    -t "${pkgdir}/usr/share/doc/${pkgname}/"
+  # man
+  install -vDm 644 "doc/build/man/${pkgname}.1" \
+    -t "${pkgdir}/usr/share/man/man1"
+  # html
+  install -vDm 644 "doc/build/singlehtml/index.html" \
+    -t "${pkgdir}/usr/share/doc/${pkgname}/html"
+  install -vDm 644 "doc/build/singlehtml/_static/"*.{css,js,png} \
+    -t "${pkgdir}/usr/share/doc/${pkgname}/html/_static"
 }
